// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Appium launcher onPrepare should respect custom Appium port 1`] = `
Array [
  "--base-path",
  "/",
  "--foo",
  "bar",
  "--port",
  "1234",
]
`;

exports[`Appium launcher onPrepare should respect custom port and path before Appium port and path 1`] = `
Array [
  "--base-path",
  "/foo/bar",
  "--foo",
  "bar",
  "--port",
  "1234",
]
`;

exports[`Appium launcher onPrepare should set correct config properties 1`] = `
Array [
  "--base-path",
  "/",
  "--foo",
  "bar",
]
`;

exports[`Appium launcher onPrepare should set correct config properties for Windows 1`] = `
Array [
  "/c",
  "path/to/my_custom_appium",
  "--base-path",
  "/",
  "--foo",
  "bar",
]
`;

exports[`Appium launcher onPrepare should set correct config properties when empty 1`] = `
Array [
  "/appium/command/path",
  "--base-path",
  "/",
]
`;

exports[`Appium launcher onPrepare should start Appium 1`] = `
Array [
  "node",
  Array [
    "/appium/command/path",
    "--base-path",
    "/",
    "--superspeed",
  ],
  Object {
    "stdio": Array [
      "ignore",
      "pipe",
      "pipe",
    ],
  },
]
`;
